--- a/opss/26. programacion modular.md
+++ b/opss/26. programacion modular.md
@@ -3,12 +3,22 @@
 - [Programación modular](#programaci%C3%B3n-modular)
   - [1. Introducción](#1-introducci%C3%B3n)
   - [2. Programación modular](#2-programaci%C3%B3n-modular)
-  - [3.	Diseño descendente TOP-DOWN](#3-dise%C3%B1o-descendente-top-down)
-  - [4.	Clasificación de módulos](#4-clasificaci%C3%B3n-de-m%C3%B3dulos)
-  - [5.	Estructura modular](#5-estructura-modular)
-  - [6.	Diseño de funciones](#6-dise%C3%B1o-de-funciones)
-  - [7.	Recursividad](#7-recursividad)
-  - [8.	Librerías](#8-librer%C3%ADas)
+    - [Ventajas](#ventajas)
+  - [3. Diseño descendente TOP-DOWN](#3-dise%C3%B1o-descendente-top-down)
+  - [4. Clasificación de módulos](#4-clasificaci%C3%B3n-de-m%C3%B3dulos)
+    - [Según el módulo que lo invoca](#seg%C3%BAn-el-m%C3%B3dulo-que-lo-invoca)
+    - [Según retorno de valores](#seg%C3%BAn-retorno-de-valores)
+    - [Según cuando ha sido desarrollado](#seg%C3%BAn-cuando-ha-sido-desarrollado)
+    - [Según el número de módulos que realizan la llamada](#seg%C3%BAn-el-n%C3%BAmero-de-m%C3%B3dulos-que-realizan-la-llamada)
+  - [5. Estructura modular](#5-estructura-modular)
+  - [6. Diseño de funciones](#6-dise%C3%B1o-de-funciones)
+    - [Parámetros](#par%C3%A1metros)
+    - [Ámbito de identificadores](#%C3%A1mbito-de-identificadores)
+  - [7. Recursividad](#7-recursividad)
+  - [8. Librerías](#8-librer%C3%ADas)
+    - [Tipos de librerías](#tipos-de-librer%C3%ADas)
+    - [Características](#caracter%C3%ADsticas)
+    - [Ejemplos (Java, C)](#ejemplos-java-c)
 
 ## 1. Introducción
 
@@ -24,57 +34,69 @@
 	-  Cada uno realiza una tarea, un identificador diferente. Se pasan parámetros
 	-  Módulos tienen un único punto de entrada y de salida
 	-  Unos módulos pueden llamar a otros
-- Ventajas
-	-  Menor coste de desarrollo. Trabajo simultáneo en paralelo
-	-  Reutilización de código. Facilidad de probar y mantener
-	-  No es necesario conocer el funcionamiento interior del módulo
-	-  Módulos se pueden agrupar en librerías o bibliotecas para poder ser usados en otros
 
-## 3.	Diseño descendente TOP-DOWN
+### Ventajas
+
+- Menor coste de desarrollo. Trabajo simultáneo en paralelo
+- Reutilización de código. Facilidad de probar y mantener
+- No es necesario conocer el funcionamiento interior del módulo
+- Módulos se pueden agrupar en librerías o bibliotecas para poder ser usados en otros
+
+## 3. Diseño descendente TOP-DOWN
 
 -  Descomposición de problemas en sucesivos niveles 
 	-  Cada módulo tiene una función lo más específica posible
 	-  Reducción del tamaño de los subproblemas. Minimizar duplicidad de código. Módulos reutilizables
 	-  Se agrupan módulos comunes según funcionalidad o temática 
 
-## 4.	Clasificación de módulos
+## 4. Clasificación de módulos
 
-- Según el módulo que lo invoca
-	-  Interno: están en el mismo fichero que el módulo que lo invoca
-	-  Externo: está en un fichero diferente
-- Según retorno de valores
+### Según el módulo que lo invoca
+
+- Interno: están en el mismo fichero que el módulo que lo invoca
+- Externo: está en un fichero diferente
+
+### Según retorno de valores
+
   - Funciones: deben devolver un valor
   - Definición, Declaración,  Llamada
     - Procedimientos:
       - No devuelven ningún valor. Parámetros de entrada, salida, o E/S.
       - Permiten devolver más de un valor
       - Definición, declaración, llamada
-- Según cuando ha sido desarrollado
+
+### Según cuando ha sido desarrollado
+
 	-  De programa: se ha desarrollado en el programa actual
 	-  De librería: ha sido desarrollado rpeviamente y está contenido en ficheros de librerías
-- Según  el número de módulos que realizan la llamada
-	-  Subprograma: es invocado por un solo módulo
-	-  Rutina o subrutina: es invocado por diversos módulos
 
-## 5.	Estructura modular
+### Según  el número de módulos que realizan la llamada
+
+- Subprograma: es invocado por un solo módulo
+- Rutina o subrutina: es invocado por diversos módulos
+
+## 5. Estructura modular
 
 - Se puede representar mediante diagrama basado en jerarquía, descomposición e independencia de módulos
 	-  Estructura secuencial
 	-  Estructura selectiva
 	-  Estructura repetitiva
 
-## 6.	Diseño de funciones
+## 6. Diseño de funciones
 
-- Parámetros: 
+### Parámetros
+
 	-  Entrada, salida, entrada y salida
 	-  Paso por copia, por valor, por referencia
-- Ámbito de identificadores
+
+### Ámbito de identificadores
+
 	-  Identificador puede ser variable, función, procedimiento, constante, etv.
 	-  Identificadores globales y locales
 	-  Recomendaciones
 - Independencia funcional
 
-## 7.	Recursividad
+## 7. Recursividad
 
 - En el cuerpo de un subprorgama hay una llamada al propio subprograma.
 - Condiciones: necesita una condición de parada. Cada iteración debe utilizar cada vez una versión del problema más reducida.
@@ -84,15 +106,21 @@
 - Ventajas:  solución simple y elegante a problemas complejos. No es necesario definir secuencia de pasos
 - Inconvenientes: sobrecarga puede producir desbordamiento de la pila. Ineficiencia de algunos algoritmos
 
-## 8.	Librerías
+## 8. Librerías
 
 - Conjunto compilado,documentado y probado de procedimientos y funciones
 - Se puede invocar desde otro programa
 - Necesario hacer referencia a la librería
-- Tipos
-	-  Código fuente (necesario compilar), compiladas (se enlazan), 
-	-  Enlace dinámico: compartidas por varias aplicaciones, reduce tamaño ejecutable, aprovechameitno de memoria
-- Características
-- Ejemplos (Java, C)
+
+### Tipos de librerías
+
+- Código fuente (necesario compilar)
+- Compiladas (se enlazan)
+- Enlace dinámico: compartidas por varias aplicaciones, reduce tamaño ejecutable, aprovechameitno de memoria
+
+### Características
+
+### Ejemplos (Java, C)
+
   - C: stdio.h, stdlib.h
   - Java: java.io, java.net
