--- a/opss/27. Programación orientada a objetos.md
+++ b/opss/27. Programación orientada a objetos.md
@@ -2,6 +2,10 @@
 - [Programación orientada a objetos](#programaci%C3%B3n-orientada-a-objetos)
   - [1. Introducción](#1-introducci%C3%B3n)
   - [2. Conceptos básicos](#2-conceptos-b%C3%A1sicos)
+    - [Objetos](#objetos)
+    - [Métodos](#m%C3%A9todos)
+    - [Mensajes](#mensajes)
+    - [Clases](#clases)
   - [3. Propiedades](#3-propiedades)
   - [4. Herencia](#4-herencia)
   - [5. Encapsulación](#5-encapsulaci%C3%B3n)
@@ -27,6 +31,8 @@
 
 ## 2. Conceptos básicos
 
+### Objetos
+
 - Objetos: contienen tanto los datos como las operaciones para manipularlos
   - Estructura de un objeto
     1. Propiedades o atributos
@@ -42,16 +48,22 @@
         2. Referencia: variables que hacen referencia a objetos de una determinada clase
         3. Miembros: variables definidas en una clase pero fuera de cualquier método
         4. Locales: se definen dentro de un métoodo o en un bloque entre llaves
-- Métodos
+
+### Métodos
+
   - Públicos, privados y protegidos
   - Mutadores (modifican algún atributo del objeto) y observadores (no modifican)
   - Constructores: se activan al crearse el objeto. Define valores iniciales de las propiedades
   - Destructores: se activa cuando el método desaparece. Se suele utilizar para liberar recursos
-- Mensajes
+
+### Mensajes
+
   - Los objetos se comunican entre sí mediante mensajes: nombre de objeto +  método + parámetros
   - Los mensajes conectan al objeto con el mundo ecterior
-- Clases
-  - Conjunto de bojetos que pertenecen a la misma familia, tienen un conjunto de métodos y datos comunes
+
+### Clases
+
+  - Conjunto de objetos que pertenecen a la misma familia, tienen un conjunto de métodos y datos comunes
   - Una clase es una estructura estática, va a definir: atributos y métodos
   - Cada objeto creado de una clase se llama instancia
   - Una clase que no tendrá instancias se llama clase abstracta
@@ -83,14 +95,14 @@
 ## 5. Encapsulación
 
 - Ocultar información que no es pertinente o necesaria para otro objeto
-- Se puede implementar meediante permisos
+- Se puede implementar mediante permisos
 - Clases pueden ser declaradas como públicas o package
 - Las variables pueden ser public, private, protected, package
 - Se puede controlar el acceso y uso inadecuado
 
 ## 6. Polimorfismo
 
-- Una referencia a un objeto de una classe puede hacer referencia a cualquiera de sus clases derivadas
+- Una referencia a un objeto de una clase puede hacer referencia a cualquiera de sus clases derivadas
 - Solo se pueden utilizar los métodos de la clase con que han sido definidas las referencias
 - Lo mismo se puede hacer con interfaces, siempre que las clases que se asocien a la referencia implementen dicha interfaz.
 - En este caso solo se pueden ejecutar métodos de la interfaz
@@ -112,7 +124,7 @@
 
 ## 9. Agrupación de clases
 
-- Varias clases se pueden agrupar en un package. 
+- Varias clases se pueden agrupar en un package.
 - Existen packages predefinidos incluídos en el lenguaje (API de Java)
 - Usuario puede crear sus propios packages con clases que estén relacionadas
 
