--- a/opss/34. Sistemas gestores de BD.md
+++ b/opss/34. Sistemas gestores de BD.md
@@ -48,22 +48,27 @@ Libres, gratuitos y no libres, comerciales
 
 # 6. Funciones de un SGDB
 
-a.	Definir
-b.	Construir
-c.	Manipular
-d.	Seguridad: evitar acceso a personal no autilzado
-e.	Integridad
-f.	Respaldo: permitir hacer copias de seguridad para poder ser restauradas
-g.	Concurrencia: permitir y controlar accesos simultáneos a los datos
+Las funciones principales son:
+
+- Definir
+- Construir
+- Manipular
+- Seguridad: evitar acceso a personal no autilzado
+- Integridad
+- Respaldo: permitir hacer copias de seguridad para poder ser restauradas
+- Concurrencia: permitir y controlar accesos simultáneos a los datos
 
 # 7.	Arquitectura de un SGDB
 
-- Arquitectura ANSI/SPARC 3 niveles
-  - Nivel físico
-  - Nivel externo
-  - Nivel conceptual
+La arquitectura ANSI/SPARC define 3 niveles:
+
+- Nivel físico
+- Nivel externo
+- Nivel conceptual
 
 # 8. Estructura de un SGDB
+
+Un SGDB está formado por los siguientes componentes:
 
 - Precompilador
 - Compilador
