--- a/opss/25. Programación estructurada.md
+++ b/opss/25. Programación estructurada.md
@@ -5,6 +5,9 @@
   - [2.	Programación convencional](#2-programaci%C3%B3n-convencional)
   - [3.	Programación estructurada](#3-programaci%C3%B3n-estructurada)
   - [4.	Estructuras básicas](#4-estructuras-b%C3%A1sicas)
+    - [Estructuras de control](#estructuras-de-control)
+    - [Estructura de selección](#estructura-de-selecci%C3%B3n)
+    - [Estructura de repetición](#estructura-de-repetici%C3%B3n)
   - [5. Programación modular](#5-programaci%C3%B3n-modular)
 
 ## 1. Introducción
@@ -41,14 +44,20 @@
 
 ## 4.	Estructuras básicas
 
-* Métodos de especificar el orden en que las instrucciones de un algoritmo s eejecutan
-* Estructuras de control:
+* Métodos de especificar el orden en que las instrucciones de un algoritmo se ejecutan
+
+### Estructuras de control
+
   * Estructura secuencial
-  * Estructura de selección
+
+### Estructura de selección
+
 a.	Simple
 b.	Doble
 c.	Múltiple
-		* Estructura de repetición
+
+### Estructura de repetición
+
 a.	Repetir mientras
 b.	Repetir hasta
 c.	Para
