--- a/opss/25. Programación estructurada.md
+++ b/opss/25. Programación estructurada.md
@@ -12,43 +12,43 @@
 
 ## 1. Introducción
 
-* Programación convencional, programas que funcionen sin importar mantenimiento
-* Nuevos programas: facilidad de entender y ampliar o modificar programas 
-* Código fácil de entender. Programas sencillos y fáciles de mantener 
+- Programación convencional, programas que funcionen sin importar mantenimiento
+- Nuevos programas: facilidad de entender y ampliar o modificar programas 
+- Código fácil de entender. Programas sencillos y fáciles de mantener 
 
 ## 2.	Programación convencional
 
-* Saltos en el código condicionales e incondicionales
-* Gran complejidad en el mantenimiento
+- Saltos en el código condicionales e incondicionales
+- Gran complejidad en el mantenimiento
 
 ## 3.	Programación estructurada
 
-* Características de un programa propio
-	* Refinamiento sucesivo
-	* Una entrada y salida. De 1 a N caminos
-	* No existen bucles infinitos
-	* Todas las instrucciones son ejecutables
-	* Ventajas
-* Teorema de la estructura
-	* Estructura secuencial: 1 entrada y 1 salida, conjunto de acciones que se ejecutan de forma lineal
-	* Estructura de repetición / iteración
-		* Repetir mientras, hasta, para
-	* Estructura alternativa / selección
-		* Simple, doble o múltiple
-* Herramientas
-	* Diseño descendente (Top-Down)
-		* De lo más general a lo más particular. Descomposición de un problema
-		* Refinamientos sucesivos. 
-	* Recursos abstractos
-		* Descomposición del problema en partes más pequeñas
+- Características de un programa propio
+	- Refinamiento sucesivo
+	- Una entrada y salida. De 1 a N caminos
+	- No existen bucles infinitos
+	- Todas las instrucciones son ejecutables
+	- Ventajas
+- Teorema de la estructura
+	- Estructura secuencial: 1 entrada y 1 salida, conjunto de acciones que se ejecutan de forma lineal
+	- Estructura de repetición / iteración
+		- Repetir mientras, hasta, para
+	- Estructura alternativa / selección
+		- Simple, doble o múltiple
+- Herramientas
+	- Diseño descendente (Top-Down)
+		- De lo más general a lo más particular. Descomposición de un problema
+		- Refinamientos sucesivos. 
+	- Recursos abstractos
+		- Descomposición del problema en partes más pequeñas
 
 ## 4.	Estructuras básicas
 
-* Métodos de especificar el orden en que las instrucciones de un algoritmo se ejecutan
+- Métodos de especificar el orden en que las instrucciones de un algoritmo se ejecutan
 
 ### Estructuras de control
 
-  * Estructura secuencial
+  - Estructura secuencial
 
 ### Estructura de selección
 
@@ -64,22 +64,22 @@ c.	Para
 
 ## 5. Programación modular
 
-* Ventajas respecto a estructurada. 
-	* División en módulos en diferentes archivos
-	* Resueltos independientemente
-	* Compilados independientemente
-* Subprogramas
-	* Funciones
-		* Definir una función
-		* Llamar a la función
-	* Procedimientos
-		* No devuelven valor
-		* Parámetros entrada, salida o ambos
-		* Partes
+- Ventajas respecto a estructurada.
+	- División en módulos en diferentes archivos
+	- Resueltos independientemente
+	- Compilados independientemente
+- Subprogramas
+	- Funciones
+		- Definir una función
+		- Llamar a la función
+	- Procedimientos
+		- No devuelven valor
+		- Parámetros entrada, salida o ambos
+		- Partes
 a.	Cabecera
 b.	Cuerpo
-	* Subrutinas
-* Ámbito de identificadores
-* Parámetros
-* Recursividad
-* Compilación separada
+	- Subrutinas
+- Ámbito de identificadores
+- Parámetros
+- Recursividad
+- Compilación separada
