--- a/opss/1.Representaciónycomunicacióndelainformación.docx.md
+++ b/opss/1.Representaciónycomunicacióndelainformación.docx.md
@@ -18,14 +18,14 @@ humanidad.
 
 ## Representación de la información digital## 
 
-## Concepto y medida de la información## 
+### Concepto y medida de la información
 
 Cantidad de información inversamente proporcional a prob. de ocurrir
 (Nevar en córdoba)
 
 Entropía
 
-## Representación de la información## 
+### Representación de la información## 
 
 Sistema binario
 
@@ -41,17 +41,17 @@ ASCII y ASCII extendido
 
 Unicode
 
-## Compresión## 
+### Compresión## 
 
-## Corrección y detección de errores## 
+### Corrección y detección de errores## 
 
-## Seguridad## 
+### Seguridad## 
 
 Criptografia
 
 ## Sistemas de comunicación ## 
 
-## Evolución histórica## 
+### Evolución histórica## 
 
 Morse (Digital). Código digital (símbolos finitos: punto y raya) de
 longitud variable. Telegrafía.
@@ -69,7 +69,7 @@ Internet
 
 Telefonía móvil
 
-## Elementos de un sistema de comunicación## 
+### Elementos de un sistema de comunicación## 
 
 Tranmitir información de un punto a otro a través de un medio. Emisor,
 receptor, canal.
@@ -78,7 +78,7 @@ Explicación modulación (señal moduladora y portadora)
 
 Ruidos y distorsiones
 
-## Sistemas analógicos y digitales## 
+### Sistemas analógicos y digitales## 
 
 Sistemas analógicos
 
@@ -107,7 +107,7 @@ Redundancia para detección y corrección de errores.
 
 Bit de paridad. Bit de paridad fila y columna
 
-## Digitalización de señales analógicas## 
+### Digitalización de señales analógicas## 
 
 Transmisión señales analógicas por medios digitales necesitan conversión
 
@@ -115,7 +115,8 @@ Muestreo
 
 Cuantificación (niveles)
 
-## Ruido en las comunicaciones## 
+### Ruido en las comunicaciones## 
 
-Canal introduce ruido. Afecta a la señal y decidir en receptor señal
+- Canal introduce ruido. 
+- Afecta a la señal y decidir en receptor señal
 original.
